--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,14 +1,16 @@
-.container{
+.containerr{
     background-color: rgb(19, 42, 71);
     border-bottom: solid 1px #ccc;
     padding: 10px;
+    width: 100%;
+    /* position: absolute; */
+    /* margin: 0 auto; */
+}
+.containerr .subcontainer{
+    width: 100%;
     margin: 0 auto;
 }
-.container .subcontainer{
-    width: 800px;
-    margin: 0 auto;
-}
-.container .subcontainer div{
+.containerr .subcontainer div{
     display: inline-block;
     vertical-align: middle;
 }
@@ -16,7 +18,7 @@
     color: #fff;
     font-weight: bolder;
     font-size: 22px;
-    width: 100px;
+    width: 300px;
 }
 
 .search{
