--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -4,7 +4,7 @@
     padding: 10px;
     width: 100%;
     /* position: absolute; */
-    /* margin: 0 auto; */
+    margin: 0 auto;
 }
 .containerr .subcontainer{
     width: 100%;
